--- a/Designs/CSS/layout3.css
+++ b/Designs/CSS/layout3.css
@@ -6,6 +6,7 @@
   
   body {
     font-family: "Open Sans", sans-serif;
+    background-color: rgb(192, 159, 222);
   }
   
   .Sponsor {
@@ -13,6 +14,7 @@
     flex-direction: row;
     justify-items: center;
     flex-wrap: wrap;
+    height: 100vh;
   }
   
   .Sponsor-wrapper {
@@ -20,6 +22,7 @@
     background-color: rgb(129, 63, 176);
     padding: 10%;
     color: #ffffff;
+    height: 100%;
   }
   
   h1 {
